# surface-control-tray

./: Cargo.toml  LICENSE  README.md  surface-control-tray.service
src/: dbus.rs  main.rs  ui.rs
src/sys/: dgpu.rs  latch.rs  perf.rs
