[package]
name = "surface-control-tray"
version = "0.1.0"
authors = ["budde25 <ethan@ebudd.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

gio = "0.9"
glib = "0.10"
gtk = "0.9"
gdk = "0.13"
libappindicator = "0.5"
failure = "0.1.8"
nix = "0.19.0"
crossbeam-channel = "0.5.0"
notify = "4.0"
anyhow = "1.0"
dbus = "0.9"
dbus-crossroads = "0.3"