[package]
name = "surface-control-tray"
version = "0.1.0"
authors = ["budde25 <ethan@ebudd.io>"]
edition = "2018"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
crossbeam-channel = "0.5.5"
dbus = "0.9.5"
dbus-crossroads = "0.5.0"
failure = "0.1.8"
gdk = "0.15.4"
gio = "0.15.11"
glib = "0.15.11"
gtk = "0.15.5"
libappindicator = "0.7.0"
nix = "0.24.1"
notify = "4.0.17"
